--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@ body{
     width:100%;
     height: 500px;
     background-color: #1F2937;
-    padding-left: 50px;
-    padding-right: 10px;
+    padding-left: 100px;
+    padding-right: 50px;
     
 }
 .header{
@@ -40,4 +40,35 @@ body{
 .navbar a{
     color: #E5E7EB;
     text-decoration: none;
+}
+
+.main{
+    display: flex;
+    padding-right: 150px;
+    justify-content: space-between;
+    width: 100%;
+    padding-left: 100px;
+}
+.text h1{
+    color:#F9FAF8;
+    font-size: 48px;
+    font-weight: 900;
+}
+.text p{
+    font-size: 18px;
+    color: #E5E7EB;
+    width: 400px;
+}
+.text button{
+    width:60 px;
+    height: 30 px;
+    padding: 10px;
+    background-color: #3882F6;
+    color: white;
+    border-radius: 10px;
+}
+.image{
+    background-color: rgba(255, 255, 255, 0.5);
+    width: 600px;
+    height: 200px;
 }
