--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
 .hero{
     padding-top: 10px;
     width:100%;
-    height: 500px;
+    height: auto;
     background-color: #1F2937;
     padding-left: 100px;
     padding-right: 50px;
@@ -57,7 +57,7 @@ body{
 .text p{
     font-size: 18px;
     color: #E5E7EB;
-    width: 400px;
+    width: 550px;
 }
 .text button{
     width:60 px;
@@ -71,4 +71,43 @@ body{
     background-color: rgba(255, 255, 255, 0.5);
     width: 600px;
     height: 200px;
+}
+.info{
+    width: 100%;
+    height: auto;
+    padding: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.random{
+    font-size: 36px;
+    color:#1F2937;
+    font-weight: 900;
+}
+.cards{
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding-left: 100px;
+    padding-right: 50px;
+    
+}
+.card1{
+    width:200px;
+    font-size: 15px;
+}
+.card{
+    height: 200px;
+    width: 200px;
+    border:1px solid #3882F6;
+    border-radius: 5px;
+}
+.quotes{
+    width: 100%;
+    height: auto;
 }
