--- a/style.css
+++ b/style.css
@@ -109,5 +109,29 @@ body{
 }
 .quotes{
     width: 100%;
-    height: auto;
+    height: 500px;
+    background-color: #E5E7EB;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    padding-top: 20px;
+    padding-bottom: 20px;
+    flex-direction: column;
+    
+}
+.quote{
+    height: 100px;
+    width: 700px;
+    font-size: 36px;
+    font-style: italic;
+    font-weight: lighter;
+    color: #1F2937;
+}
+.author{
+    color: #1F2937;
+    font-weight: bold;
+    font-size: 20px;
+    align-items: end;
+    margin-left: 300px;
 }
