--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ body{
 .card{
     height: 200px;
     width: 200px;
-    border:1px solid #3882F6;
+    border:2px solid #3882F6;
     border-radius: 5px;
 }
 .quotes{
@@ -134,4 +134,29 @@ body{
     font-size: 20px;
     align-items: end;
     margin-left: 300px;
+}
+.action{
+    width: 100%;
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.actiontext{
+    width: 80%;
+    height: 150px;
+    border-radius: 10px;
+    background-color: #3882F6;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    color: white;
+}
+.actiontext button{
+    background-color: #3882F6;
+    border: 1px solid white;
+    padding: 20px;
+    color: white;
+    font-size: large;
+    border-radius: 15px;
 }
