--- a/style.css
+++ b/style.css
@@ -160,3 +160,12 @@ body{
     font-size: large;
     border-radius: 15px;
 }
+.footer{
+    width: 100%;
+    height: 60px;
+    background-color: #1F2937;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
